psl-parser/src/main/java/org/linqs/psl/parser/antlr/PSLParser.java
// Generated from PSL.g4 by ANTLR 4.5.3
package org.linqs.psl.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, EXPONENT_EXPRESSION=5, LESS_THAN_EQUAL=6, 
		GREATER_THAN_EQUAL=7, EQUAL=8, PLUS=9, MINUS=10, MULT=11, DIV=12, MAX=13, 
		MIN=14, IDENTIFIER=15, NONNEGATIVE_NUMBER=16, PERIOD=17, COMMA=18, COLON=19, 
		NEGATION=20, AMPERSAND=21, PIPE=22, LPAREN=23, RPAREN=24, LBRACE=25, RBRACE=26, 
		LBRACKET=27, RBRACKET=28, SINGLE_QUOTE=29, DOUBLE_QUOTE=30, WS=31, COMMENT=32, 
		LINE_COMMENT=33, PYTHON_COMMENT=34;
	public static final int
		RULE_program = 0, RULE_pslRule = 1, RULE_predicate = 2, RULE_atom = 3, 
		RULE_literal = 4, RULE_term = 5, RULE_variable = 6, RULE_constant = 7, 
		RULE_logicalRule = 8, RULE_weightedLogicalRule = 9, RULE_unweightedLogicalRule = 10, 
		RULE_logicalRuleExpression = 11, RULE_disjunctiveClause = 12, RULE_conjunctiveClause = 13, 
		RULE_arithmeticRule = 14, RULE_weightedArithmeticRule = 15, RULE_unweightedArithmeticRule = 16, 
		RULE_arithmeticRuleExpression = 17, RULE_arithmeticRuleOperand = 18, RULE_summationAtom = 19, 
		RULE_summationVariable = 20, RULE_coefficient = 21, RULE_selectStatement = 22, 
		RULE_boolExpression = 23, RULE_weightExpression = 24, RULE_not = 25, RULE_and = 26, 
		RULE_or = 27, RULE_then = 28, RULE_impliedBy = 29, RULE_termOperator = 30, 
		RULE_termEqual = 31, RULE_notEqual = 32, RULE_arithmeticRuleRelation = 33, 
		RULE_arithmeticOperator = 34, RULE_linearOperator = 35, RULE_coeffOperator = 36, 
		RULE_number = 37;
	public static final String[] ruleNames = {
		"program", "pslRule", "predicate", "atom", "literal", "term", "variable", 
		"constant", "logicalRule", "weightedLogicalRule", "unweightedLogicalRule", 
		"logicalRuleExpression", "disjunctiveClause", "conjunctiveClause", "arithmeticRule", 
		"weightedArithmeticRule", "unweightedArithmeticRule", "arithmeticRuleExpression", 
		"arithmeticRuleOperand", "summationAtom", "summationVariable", "coefficient", 
		"selectStatement", "boolExpression", "weightExpression", "not", "and", 
		"or", "then", "impliedBy", "termOperator", "termEqual", "notEqual", "arithmeticRuleRelation", 
		"arithmeticOperator", "linearOperator", "coeffOperator", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'>>'", "'->'", "'<<'", "'<-'", null, "'<='", "'>='", "'='", "'+'", 
		"'-'", "'*'", "'/'", "'@Max'", "'@Min'", null, null, "'.'", "','", "':'", 
		null, "'&'", "'|'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'''", "'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "EXPONENT_EXPRESSION", "LESS_THAN_EQUAL", 
		"GREATER_THAN_EQUAL", "EQUAL", "PLUS", "MINUS", "MULT", "DIV", "MAX", 
		"MIN", "IDENTIFIER", "NONNEGATIVE_NUMBER", "PERIOD", "COMMA", "COLON", 
		"NEGATION", "AMPERSAND", "PIPE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"LBRACKET", "RBRACKET", "SINGLE_QUOTE", "DOUBLE_QUOTE", "WS", "COMMENT", 
		"LINE_COMMENT", "PYTHON_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<PslRuleContext> pslRule() {
			return getRuleContexts(PslRuleContext.class);
		}
		public PslRuleContext pslRule(int i) {
			return getRuleContext(PslRuleContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				pslRule();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << MAX) | (1L << MIN) | (1L << IDENTIFIER) | (1L << NONNEGATIVE_NUMBER) | (1L << NEGATION) | (1L << PIPE) | (1L << LPAREN) | (1L << SINGLE_QUOTE) | (1L << DOUBLE_QUOTE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PslRuleContext extends ParserRuleContext {
		public LogicalRuleContext logicalRule() {
			return getRuleContext(LogicalRuleContext.class,0);
		}
		public ArithmeticRuleContext arithmeticRule() {
			return getRuleContext(ArithmeticRuleContext.class,0);
		}
		public PslRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pslRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterPslRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitPslRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitPslRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PslRuleContext pslRule() throws RecognitionException {
		PslRuleContext _localctx = new PslRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pslRule);
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				logicalRule();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				arithmeticRule();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PSLParser.IDENTIFIER, 0); }
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PSLParser.LPAREN, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(PSLParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PSLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PSLParser.COMMA, i);
		}
		public TermOperatorContext termOperator() {
			return getRuleContext(TermOperatorContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atom);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				predicate();
				setState(88);
				match(LPAREN);
				setState(89);
				term();
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(90);
					match(COMMA);
					setState(91);
					term();
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(97);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				term();
				setState(100);
				termOperator();
				setState(101);
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_literal);
		try {
			setState(109);
			switch (_input.LA(1)) {
			case IDENTIFIER:
			case SINGLE_QUOTE:
			case DOUBLE_QUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				atom();
				}
				break;
			case NEGATION:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				not();
				setState(107);
				literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_term);
		try {
			setState(113);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				variable();
				}
				break;
			case SINGLE_QUOTE:
			case DOUBLE_QUOTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				constant();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PSLParser.IDENTIFIER, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public List<TerminalNode> SINGLE_QUOTE() { return getTokens(PSLParser.SINGLE_QUOTE); }
		public TerminalNode SINGLE_QUOTE(int i) {
			return getToken(PSLParser.SINGLE_QUOTE, i);
		}
		public TerminalNode IDENTIFIER() { return getToken(PSLParser.IDENTIFIER, 0); }
		public List<TerminalNode> DOUBLE_QUOTE() { return getTokens(PSLParser.DOUBLE_QUOTE); }
		public TerminalNode DOUBLE_QUOTE(int i) {
			return getToken(PSLParser.DOUBLE_QUOTE, i);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitConstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constant);
		try {
			setState(123);
			switch (_input.LA(1)) {
			case SINGLE_QUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(SINGLE_QUOTE);
				setState(118);
				match(IDENTIFIER);
				setState(119);
				match(SINGLE_QUOTE);
				}
				break;
			case DOUBLE_QUOTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(DOUBLE_QUOTE);
				setState(121);
				match(IDENTIFIER);
				setState(122);
				match(DOUBLE_QUOTE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalRuleContext extends ParserRuleContext {
		public WeightedLogicalRuleContext weightedLogicalRule() {
			return getRuleContext(WeightedLogicalRuleContext.class,0);
		}
		public UnweightedLogicalRuleContext unweightedLogicalRule() {
			return getRuleContext(UnweightedLogicalRuleContext.class,0);
		}
		public LogicalRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterLogicalRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitLogicalRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitLogicalRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalRuleContext logicalRule() throws RecognitionException {
		LogicalRuleContext _localctx = new LogicalRuleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_logicalRule);
		try {
			setState(127);
			switch (_input.LA(1)) {
			case NONNEGATIVE_NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				weightedLogicalRule();
				}
				break;
			case IDENTIFIER:
			case NEGATION:
			case SINGLE_QUOTE:
			case DOUBLE_QUOTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				unweightedLogicalRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WeightedLogicalRuleContext extends ParserRuleContext {
		public WeightExpressionContext weightExpression() {
			return getRuleContext(WeightExpressionContext.class,0);
		}
		public LogicalRuleExpressionContext logicalRuleExpression() {
			return getRuleContext(LogicalRuleExpressionContext.class,0);
		}
		public TerminalNode EXPONENT_EXPRESSION() { return getToken(PSLParser.EXPONENT_EXPRESSION, 0); }
		public WeightedLogicalRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weightedLogicalRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterWeightedLogicalRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitWeightedLogicalRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitWeightedLogicalRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WeightedLogicalRuleContext weightedLogicalRule() throws RecognitionException {
		WeightedLogicalRuleContext _localctx = new WeightedLogicalRuleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_weightedLogicalRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			weightExpression();
			setState(130);
			logicalRuleExpression();
			setState(132);
			_la = _input.LA(1);
			if (_la==EXPONENT_EXPRESSION) {
				{
				setState(131);
				match(EXPONENT_EXPRESSION);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnweightedLogicalRuleContext extends ParserRuleContext {
		public LogicalRuleExpressionContext logicalRuleExpression() {
			return getRuleContext(LogicalRuleExpressionContext.class,0);
		}
		public TerminalNode PERIOD() { return getToken(PSLParser.PERIOD, 0); }
		public UnweightedLogicalRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unweightedLogicalRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterUnweightedLogicalRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitUnweightedLogicalRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitUnweightedLogicalRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnweightedLogicalRuleContext unweightedLogicalRule() throws RecognitionException {
		UnweightedLogicalRuleContext _localctx = new UnweightedLogicalRuleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_unweightedLogicalRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			logicalRuleExpression();
			setState(135);
			match(PERIOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalRuleExpressionContext extends ParserRuleContext {
		public DisjunctiveClauseContext disjunctiveClause() {
			return getRuleContext(DisjunctiveClauseContext.class,0);
		}
		public ImpliedByContext impliedBy() {
			return getRuleContext(ImpliedByContext.class,0);
		}
		public ConjunctiveClauseContext conjunctiveClause() {
			return getRuleContext(ConjunctiveClauseContext.class,0);
		}
		public ThenContext then() {
			return getRuleContext(ThenContext.class,0);
		}
		public LogicalRuleExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalRuleExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).enterLogicalRuleExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSLListener ) ((PSLListener)listener).exitLogicalRuleExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PSLVisitor ) return ((PSLVisitor<? extends T>)visitor).visitLogicalRuleExpression(this);
			else return visitor.visitChildren(this);
		}
	}
